# AshareLab

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: security.md  workflow.md
examples/data/: sample_prices.csv
examples/strategies/: example_momentum.json
scripts/: check_release.ps1  run_example.ps1
src/research_workflow/: __init__.py  cli.py  models.py  reports.py
src/research_workflow/backtest/: event_engine.py  metrics.py
src/research_workflow/data/: csv_loader.py
src/research_workflow/execution/: notifications.py
src/research_workflow/security/: secret_scan.py
src/research_workflow/strategies/: __init__.py  example_momentum.py
tests/: test_example_workflow.py
